gap fix.

--- a/assets/styl/_width.styl
+++ b/assets/styl/_width.styl
@@ -1,9 +1,10 @@
 
 width($font, $center)
+  $gap = 24px
   $limit1 = $center / 0.9
-  $limit2 = $center + 2 * 80px
-  $limit3 = $center + 2 * $font * 8
-  $half   = ( $center ) / 2 + 12px
+  $limit2 = $center + 2 * ( $gap + 80px )
+  $limit3 = $center + 2 * ( $gap + $font * 9 )
+  $half   = ( $center + $gap ) / 2
 
   .writeframe,
   .outframe
@@ -14,7 +15,7 @@ width($font, $center)
       width: "calc( 50% - %s )" % $half
   @media screen and (max-width: $limit3)
     .summary
-      width: $font * 8
+      width: $font * 9
 
   @media screen and (min-width: $limit2)
     .sideframe
@@ -38,4 +39,4 @@ width($font, $center)
       .contentframe
         margin: 0 5%
     .summary:hover
-      width: "calc( 100% - %s )"% 50px
+      width: "calc( 100% - %s )" % 50px
